Desenvolvido CRUD de Contas Recebidas
Foram feitas alterações do banco, modelos e repositorios. Foi feito CRUD completo da tela de contas a receber com verificações de erro.

--- a/Financeiro/ContaPagarRepository/FinanceiroRepository.csproj
+++ b/Financeiro/ContaPagarRepository/FinanceiroRepository.csproj
@@ -46,9 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClientesRepository.cs" />
-    <Compile Include="ContasPagarRepository.cs" />
-    <Compile Include="ContasReceberRepository.cs" />
+    <Compile Include="ClienteRepository.cs" />
+    <Compile Include="ContaPagarRepository.cs" />
+    <Compile Include="ContaReceberRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
