--- a/Financeiro/Model/Model.csproj
+++ b/Financeiro/Model/Model.csproj
@@ -46,9 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Clientes.cs" />
-    <Compile Include="ContasPagar.cs" />
-    <Compile Include="ContasReceber.cs" />
+    <Compile Include="Cliente.cs" />
+    <Compile Include="ContaPagar.cs" />
+    <Compile Include="ContaReceber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
