--- a/Financeiro/Model/Model.csproj
+++ b/Financeiro/Model/Model.csproj
@@ -54,5 +54,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Estrutura.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
