--- a/Financeiro/FinanceiroRepository/FinanceiroRepository.csproj
+++ b/Financeiro/FinanceiroRepository/FinanceiroRepository.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClienteRepository.cs" />
     <Compile Include="ContaPagarRepository.cs" />
     <Compile Include="ContaReceberRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
